# chessmate

./: .env.sample  .gitignore  .ocamlformat  AGENTS.md  CAQTI_MIGRATION_PLAN.md  LICENSE  README.md  RELEASE_NOTES.md  REVIEW.md  bootstrap.sh  chessmate.opam  docker-compose.yml  dune-project
.githooks/: pre-commit
.github/workflows/: ci.yml
data/games/: sample_game.pgn
data/qdrant/: raft_state.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CHESSMATE_FOR_DUMMIES.md  COOKBOOK.md  DEVELOPER.md  Embedding Chess Positions FEN.md  GUIDELINES.md  IMPLEMENTATION_PLAN.md  LOAD_TESTING.md  OPERATIONS.md  PROFILING.md  PROMPTS.md  REVIEW.md  REVIEW_v3.md  REVIEW_v4.md  REVIEW_v5.md  SCRATCHPAD.md  TESTING.md  TROUBLESHOOTING.md  cli.mld  dune  embedding.mld  index.mld  openapi.yaml  pipeline.mld  query.mld  services.mld
docs/ADR/: ADR-000-template.md  ADR-001-ocaml-architecture.md  ADR-004-caqti-migration.md
docs/INCIDENTS/: incident-template.md
docs/handbook/: ARCHITECTURE.md  CHANGELOG.md  CHESSMATE_FOR_DUMMIES.md  COOKBOOK.md  DEVELOPER.md  GUIDELINES.md  LOAD_TESTING.md  OPERATIONS.md  REVIEW_v4.md  REVIEW_v5.md  TESTING.md  TROUBLESHOOTING.md
docs/issues/: hybrid-planner-qdrant-consolidation.md
docs/runbooks/: agent-timeouts.md  capacity-planning.md  circuit-breaker.md
lib/: agents_gpt5_client.ml  agents_gpt5_client.mli  api_metrics.ml  api_metrics.mli  cli_metrics.ml  cli_metrics.mli  dune  metrics.ml  metrics.mli  metrics_http.ml  metrics_http.mli  worker_health_server.ml  worker_health_server.mli  worker_metrics.ml  worker_metrics.mli
lib/agents/: agents_gpt5_client.ml  agents_gpt5_client.mli
lib/api/: body_limit.ml  body_limit.mli  rate_limiter.ml  rate_limiter.mli
lib/chess/: fen.ml  fen.mli  game_metadata.ml  game_metadata.mli  openings.ml  openings.mli  pgn_parser.ml  pgn_parser.mli  pgn_to_fen.ml  pgn_to_fen.mli  position_features.ml  position_features.mli
lib/cli/: cli_common.ml  cli_common.mli  collection_command.ml  collection_command.mli  config_command.ml  config_command.mli  http_client.ml  http_client.mli  ingest_command.ml  ingest_command.mli  pgn_to_fen_command.ml  pgn_to_fen_command.mli  search_command.ml  search_command.mli  service_health.ml  service_health.mli  twic_precheck_command.ml  twic_precheck_command.mli
lib/core/: config.ml  config.mli  fen.mli  game_metadata.ml  game_metadata.mli  health.ml  health.mli  openai_common.ml  openai_common.mli  pgn_parser.ml  pgn_parser.mli  position_features.mli  retry.ml  retry.mli  sanitizer.ml  sanitizer.mli  temp_file_guard.ml  temp_file_guard.mli
lib/embedding/: embedding_client.ml  embedding_client.mli  embedding_job.ml  embedding_job.mli  embeddings_cache.ml  embeddings_cache.mli  vector_payload.ml  vector_payload.mli
lib/query/: agent_cache.ml  agent_cache.mli  agent_circuit_breaker.ml  agent_circuit_breaker.mli  agent_evaluator.ml  agent_evaluator.mli  agent_response.ml  agent_response.mli  agent_telemetry.ml  agent_telemetry.mli  hybrid_executor.ml  hybrid_executor.mli  hybrid_planner.ml  hybrid_planner.mli  query_embedding_provider.ml  query_embedding_provider.mli  query_intent.ml  query_intent.mli  result_formatter.ml  result_formatter.mli
lib/storage/: ingestion_queue.ml  ingestion_queue.mli  repo_postgres.ml  repo_postgres.mli  repo_postgres_caqti.ml  repo_postgres_caqti.mli  repo_qdrant.ml  repo_qdrant.mli
prometheus/: prometheus.yml  prometheus.yml.example
scripts/: check_gpl_headers.sh  check_metrics.sh  embedding_metrics.sh  load_test.sh  migrate.sh  prune_pending_jobs.sh  run_prometheus.sh  seed_sample_games.sql
test/: dune  test_agent_circuit_breaker.ml  test_api_metrics.ml  test_chess_parsing.ml  test_chessmate.ml  test_collection_command.ml  test_config.ml  test_embedding_client.ml  test_fen.ml  test_health.ml  test_hybrid_executor.ml  test_integration.ml  test_integration_support.ml  test_main.ml  test_openai_common.ml  test_qdrant.ml  test_query.ml  test_rate_limiter.ml  test_rate_limiter_http.ml  test_retry.ml  test_sanitizer.ml  test_sql_filters.ml  test_support.ml  test_temp_file_guard.ml  test_worker_health_endpoint.ml
test/fixtures/: annotated_game.pgn  extended_sample_game.pgn  sample_game.pgn
(+22 files in other folders)
