(test
 (name test_main)
 (modules
  test_support
  test_chess_parsing
  test_query
  test_rate_limiter
  test_fen
  test_retry
  test_config
  test_embedding_client
  test_openai_common
  test_api_metrics
  test_integration_support
  test_integration
  test_sql_filters
  test_qdrant
  test_sanitizer
  test_health
  test_temp_file_guard
  test_main)
 (libraries chessmate alcotest stdio)
 (deps
  (file fixtures/annotated_game.pgn)
  (file fixtures/extended_sample_game.pgn)
  (file fixtures/sample_game.pgn)))
